section for user ans/sub in admin index

--- a/frege/templates/admin/index.html
+++ b/frege/templates/admin/index.html
@@ -11,15 +11,15 @@
 
 {% block content %}
 <div id="content-main">
-
 {% if app_list %}
     {% for app in app_list %}
         <div class="app-{{ app.app_label }} module">
         <table>
         <caption>
-            <a href="{{ app.app_url }}" class="section" title="{% blocktrans with name=app.name %}Models in the {{ name }} application{% endblocktrans %}">{{ app.name }}</a>
+            <a href="{{ app.app_url }}" class="section">{{ app.name }}</a>
         </caption>
         {% for model in app.models %}
+          {% if model.object_name != 'ChapterSubmission' and model.object_name != 'OpenAnswer' %}
             <tr class="model-{{ model.object_name|lower }}">
             {% if model.admin_url %}
                 <th scope="row"><a href="{{ model.admin_url }}">{{ model.name }}</a></th>
@@ -39,9 +39,44 @@
                 <td>&nbsp;</td>
             {% endif %}
             </tr>
+          {% endif %}
         {% endfor %}
         </table>
         </div>
+    {% endfor %}
+    {% for app in app_list %}
+      {% if app.app_label == 'logic' %}
+        <div class="app-{{ app.app_label }} module">
+        <table>
+        <caption>
+            <a href="{{ app.app_url }}" class="section">{{ app.name }}: משתמשים</a>
+        </caption>
+        {% for model in app.models %}
+          {% if model.object_name == 'ChapterSubmission' or model.object_name == 'OpenAnswer' %}
+            <tr class="model-{{ model.object_name|lower }}">
+            {% if model.admin_url %}
+                <th scope="row"><a href="{{ model.admin_url }}">{{ model.name }}</a></th>
+            {% else %}
+                <th scope="row">{{ model.name }}</th>
+            {% endif %}
+
+            {% if model.add_url %}
+                <td><a href="{{ model.add_url }}" class="addlink">{% trans 'Add' %}</a></td>
+            {% else %}
+                <td>&nbsp;</td>
+            {% endif %}
+
+            {% if model.admin_url %}
+                <td><a href="{{ model.admin_url }}" class="changelink">{% trans 'Change' %}</a></td>
+            {% else %}
+                <td>&nbsp;</td>
+            {% endif %}
+            </tr>
+          {% endif %}
+        {% endfor %}
+        </table>
+        </div>
+      {% endif %}
     {% endfor %}
 {% else %}
     <p>{% trans "You don't have permission to edit anything." %}</p>
