global settings tweak in admin index

--- a/frege/templates/admin/index.html
+++ b/frege/templates/admin/index.html
@@ -19,7 +19,7 @@
             <a href="{{ app.app_url }}" class="section">{{ app.name }}</a>
         </caption>
         {% for model in app.models %}
-          {% if model.object_name != 'ChapterSubmission' and model.object_name != 'OpenAnswer' %}
+          {% if model.object_name != 'ChapterSubmission' and model.object_name != 'OpenAnswer' and model.object_name != 'GlobalSettings' %}
             <tr class="model-{{ model.object_name|lower }}">
             {% if model.admin_url %}
                 <th scope="row"><a href="{{ model.admin_url }}">{{ model.name }}</a></th>
@@ -53,6 +53,40 @@
         </caption>
         {% for model in app.models %}
           {% if model.object_name == 'ChapterSubmission' or model.object_name == 'OpenAnswer' %}
+            <tr class="model-{{ model.object_name|lower }}">
+            {% if model.admin_url %}
+                <th scope="row"><a href="{{ model.admin_url }}">{{ model.name }}</a></th>
+            {% else %}
+                <th scope="row">{{ model.name }}</th>
+            {% endif %}
+
+            {% if model.add_url %}
+                <td><a href="{{ model.add_url }}" class="addlink">{% trans 'Add' %}</a></td>
+            {% else %}
+                <td>&nbsp;</td>
+            {% endif %}
+
+            {% if model.admin_url %}
+                <td><a href="{{ model.admin_url }}" class="changelink">{% trans 'Change' %}</a></td>
+            {% else %}
+                <td>&nbsp;</td>
+            {% endif %}
+            </tr>
+          {% endif %}
+        {% endfor %}
+        </table>
+        </div>
+      {% endif %}
+    {% endfor %}
+    {% for app in app_list %}
+      {% if app.app_label == 'logic' %}
+        <div class="app-{{ app.app_label }} module">
+        <table>
+        <caption>
+            <a href="{{ app.app_url }}" class="section">{{ app.name }}: הגדרות</a>
+        </caption>
+        {% for model in app.models %}
+          {% if model.object_name == 'GlobalSettings' %}
             <tr class="model-{{ model.object_name|lower }}">
             {% if model.admin_url %}
                 <th scope="row"><a href="{{ model.admin_url }}">{{ model.name }}</a></th>
