--- a/frege/logic/templates/logic/open.html
+++ b/frege/logic/templates/logic/open.html
@@ -25,16 +25,20 @@ $(document).ready(function() {
 
   <form id="ansform" enctype="multipart/form-data">{% csrf_token %}
     <textarea id="anstxt" name="anstxt" style="min-width: 100%; resize: none; padding: 4px;" rows=10 maxlength=1000 autofocus {% if answer or filename %}disabled{% endif %}>{{answer}}</textarea>
-    <label class="btn btn-default btn-lg" id="filelbl">
+    {% if question.has_file %}
+    <div>
+      <label class="btn btn-default btn-lg" id="filelbl">
         <span class="glyphicon glyphicon-folder-open"></span>
         העלאת קובץ <input type="file" name="file" id="file" style="display: none;">
-    </label>
-    <label id="filename" class="text-muted small">
-      {% if filename %}קובץ: {{filename}}
-      {% else %} לא נבחר
-      {% endif %}
-    </label>
-    <button id="unfile" type="button" class="btn btn-default btn-sm" onclick="resetE($('#file'));" style="display: none;"><span class="glyphicon glyphicon-remove"></span></button>
+      </label>
+      <label id="filename" class="text-muted small">
+        {% if filename %}קובץ: {{filename}}
+        {% else %} לא נבחר
+        {% endif %}
+      </label>
+      <button id="unfile" type="button" class="btn btn-default btn-sm" onclick="resetE($('#file'));" style="display: none;"><span class="glyphicon glyphicon-remove"></span></button>
+    </div>
+    {% endif %}
   </form>
 
 </div>
