improvements to file handling in open question

--- a/frege/logic/templates/logic/choice.html
+++ b/frege/logic/templates/logic/choice.html
@@ -21,5 +21,7 @@
   function getPostData() {
       return {'choice':$('input[name=choice]:checked','#choices').val()};
   }
+  function ansOk() {
+  }
 </script>
 {% endblock question_content %} 
