--- a/frege/logic/templates/logic/formulation.html
+++ b/frege/logic/templates/logic/formulation.html
@@ -36,5 +36,7 @@
   function getPostData() {
       return {'formulation':$('#ftxt').val()};
   }
+  function ansOk() {
+  }
 </script>
 {% endblock question_content %} 
