added help page

--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -7,6 +7,7 @@
 יש להגיע למסקנה באמצעות הפעלת כללי דדוקציה. שימו לב כי המסקנה חייבת להופיע בשורה האחרונה.
 {% endblock hint %}
 {% block hint_link %}הסבר נוסף{% endblock %}
+{% block hint_anchor %}deduction{% endblock %}
 
 
 {% block question_content %}
