help pages tweaks

--- a/frege/logic/templates/logic/help.html
+++ b/frege/logic/templates/logic/help.html
@@ -76,7 +76,7 @@
         <h4>הצרנות</h4>
       </div>
       <p>
-        בשאלות הצרנה אתם מתבקשים להזין הצרנה אחת (גם אם יש כמה נכונות) עבור הטענה או הטיעון הנתונים. ההצרנה חייבת להיות תקינה תחבירית על מנת שתתקבל. על מנת להזין הצרנה של טיעון, יש להזין החנות מופרדות בפסיק, סימן ∴ ומסקנה. למשל:
+        בשאלות הצרנה אתם מתבקשים להזין הצרנה אחת (גם אם יש כמה נכונות) עבור הטענה או הטיעון הנתונים. ההצרנה חייבת להיות תקינה תחבירית על מנת שתתקבל. על מנת להזין הצרנה של טיעון, יש להזין הנחות מופרדות בפסיק, סימן ∴ ומסקנה. למשל:
       </p>
       <img src='{% static 'logic/images/help/form-arg.png'%}'>
 
@@ -102,14 +102,14 @@
       </p>
       <img src='{% static 'logic/images/help/tt-select.png'%}'>
       <p>
-        ניתן לבטל בחירה באמצעות לחיצה חוזרת על הערך. ניתן למחוק עמודה שלמה באמצעות לחיצה על כפתור המחיקה שמתחת לעמודה.
+        ניתן לבטל בחירה באמצעות לחיצה חוזרת על הערך. ניתן לנקות עמודה שלמה באמצעות לחיצה על כפתור המחיקה שמתחת לעמודה.
       </p>
       <img src='{% static 'logic/images/help/tt-delete.png'%}'>
       <p>
-        לאחר מילוי הטבלה עליכם לבחור את התשובה הנכונה מבין האפשרויות המצוגות.
+        לאחר מילוי הטבלה עליכם לבחור את התשובה הנכונה מבין האפשרויות המוצגות.
       </p>
       </p>
-        <u>שימו לב:</u> עבור נוסחאות מורכבות, מומלץ מאוד לכתוב על דף טבלת אמת עם עמודות עזר על מנת להגיע לפיתרון בקלות.
+        <u>שימו לב:</u> עבור נוסחאות מורכבות, מומלץ מאוד לכתוב על דף טבלת אמת עם עמודות עזר על מנת להגיע לפתרון בקלות.
       </p>
 
       <a class="anchor" id="truth-tables-cons"></a>
@@ -145,15 +145,19 @@
       <h5>הוצאת קוניוקציה</h5>
       <p>הפעלה:</p>
       <img src='{% static 'logic/images/help/con-e.png'%}'>
-      <p>תוצאה:</p>
+      <p>יש להזין נוסחה:</p>
       <img src='{% static 'logic/images/help/con-e-2.png'%}'>
+      <p>תוצאה:</p>
+      <img src='{% static 'logic/images/help/con-e-3.png'%}'>
 
       <a class="anchor" id="dis-i"></a>
       <h5>הכנסת דיסיונקציה</h5>
       <p>הפעלה:</p>
       <img src='{% static 'logic/images/help/dis-i.png'%}'>
-      <p>תוצאה:</p>
+      <p>יש להזין נוסחה:</p>
       <img src='{% static 'logic/images/help/dis-i-2.png'%}'>
+      <p>תוצאה:</p>
+      <img src='{% static 'logic/images/help/dis-i-3.png'%}'>
 
       <a class="anchor" id="dis-e"></a>
       <h5>הוצאת דיסיונקציה</h5>
@@ -187,8 +191,10 @@
       <h5>הוצאת שקילות</h5>
       <p>הפעלה:</p>
       <img src='{% static 'logic/images/help/eqv-e.png'%}'>
-      <p>תוצאה:</p>
+      <p>יש להזין נוסחה (מבין שתי האימפליקציות האפשריות):</p>
       <img src='{% static 'logic/images/help/eqv-e-2.png'%}'>
+      <p>תוצאה:</p>
+      <img src='{% static 'logic/images/help/eqv-e-3.png'%}'>
 
       <a class="anchor" id="neg-i"></a>
       <h5>הכנסת שלילה</h5>
@@ -226,7 +232,7 @@
       <h5>הכנסת כמת ישי</h5>
       <p>הפעלה:</p>
       <img src='{% static 'logic/images/help/exs-i.png'%}'>
-      <p>יש לבחור קבוע ומשתנה:</p>
+      <p>יש לבחור קבוע ומשתנה באופן הבא:</p>
       <img src='{% static 'logic/images/help/exs-i-2.png'%}'>
       <p>תוצאה:</p>
       <img src='{% static 'logic/images/help/exs-i-3.png'%}'>
