fix num of sub calc in user summary

--- a/frege/logic/templates/logic/user.html
+++ b/frege/logic/templates/logic/user.html
@@ -17,7 +17,7 @@
     <div class="table-responsive">
     {% if chaptersubmission_list %}
       <p>
-        הגשת עד כה {{chaptersubmission_list|length}} פרקים.
+        הגשת עד כה {{sub_len}} פרקים.
       </p>
       <table class="table table-condensed">
         <thead>
